@@ -36,7 +36,7 @@
     <div id="mainWp">
     	<div id="content" class="container">
         	<div class="topSubBtns">
-                <p class="headerTxt">Detector Operation</p>
+                <p class="headerTxt2">Detector Operation</p>
                 <ul class="btnsLink">
                     <li class="genBtn1"><a href="#">General</a></li>
                     <li class="detBtn2"><a href="operation.html" class="active">Detector Operation</a></li>
@@ -160,52 +160,17 @@ height="200"></iframe>
                      </div><!--end secRow_genNew-->                    
                     
                     <div class="largeGeneralNews2">
-                    	<h3>General news</h3>
-                        <div class="subBox">
+                    	<h3>Posted News</h3>
+                        <div class="subBoxOpen">
                         	<div class="datapreInside">
-                        	<h6>ATLAS Week ongoing in Barcelona</h6>  
-                           	<div class="dataTable">
-                            	<table width="100%" border="0" cellspacing="0" cellpadding="0">
-                                  <tr>
-                                    <td>Donec quam felis</td>
-                                    <td>Donec quam felis</td>
-                                    <td>Donec quam felis</td>
-                                    <td>Donec quam felis</td>
-                                    <td>Donec quam felis</td>
-                                  </tr>
-                                  <tr>
-                                    <td>Donec quam felis</td>
-                                    <td>Donec quam felis</td>
-                                    <td>Donec quam felis</td>
-                                    <td>Donec quam felis</td>
-                                    <td>Donec quam felis</td>
-                                  </tr>
-                                  <tr>
-                                    <td>Donec quam felis</td>
-                                    <td>Donec quam felis</td>
-                                    <td>Donec quam felis</td>
-                                    <td>Donec quam felis</td>
-                                    <td>Donec quam felis</td>
-                                  </tr>
-                                  <tr>
-                                    <td>Donec quam felis</td>
-                                    <td>Donec quam felis</td>
-                                    <td>Donec quam felis</td>
-                                    <td>Donec quam felis</td>
-                                    <td>Donec quam felis</td>
-                                  </tr>
-                                </table>
-
-                            </div>
+                                <!-- <h6>Program of the Day</h6> -->
+                                <iframe src="https://atlasop.cern.ch/atlas-point1/events.html" width="100%" 
+height="100"></iframe>
                             </div>
                         </div>
-                    </div>
-                                      
-                	
+                    </div>             	
                 </div><!--dataPre_rightCol-->
-            </div><!--end dataPreBox-->         
-        	
-        
+            </div><!--end dataPreBox-->               
         
         <div class="clearfix"></div>          
         </div><!--end content-->
